--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ dataset/top_authors_data.csv
 dataset/top_books_data.csv
 dataset/scorecard_data.csv
 dataset/format_data.csv
+Page1 v.1.pdf
+dataset/top_publishers_data.csv
